chore: .DS_Store 파일 무시 처리

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ out/
 ### application.yml ###
 src/main/resources/application.yml
 src/main/resources/application-*.yml
+
+### macOS system files ###
+.DS_Store
